skeplib/tests/fixtures/parser/invalid/from_import_duplicate_alias.sk
from utils.math import add as x, sub as x;

fn main() -> Int {
  return 0;
}
